# poseidon-bot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: ai-status.py  hello.py
src/: bot.py
